fix overflow

--- a/packages/app/src/mine.module.scss
+++ b/packages/app/src/mine.module.scss
@@ -5,3 +5,9 @@
   gap: var(--s4);
   align-items: center;
 }
+
+.resource {
+  display: flex;
+  gap: var(--s3);
+  align-items: center;
+}
